--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: auto;
+  width: 720px;
+  height: 1280px;
   background: #fff;
   box-shadow: 0 3px 10px -2px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -71,7 +72,7 @@ nav ul ul li {
 }
 
 nav ul ul li a {
-  padding: 0px 0px;
+  padding: auto auto;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
