--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   font-family: 'Lato', sans-serif;
 }
 
+html, body {
+  width: 720px;
+  height: 1280px;
+ }
+
 /*| Navigation |*/
 nav {
   position: fixed;
