--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 html, body {
   width: auto;
-  height: auto;
+  height: 500px;
  }
 
 /*| Navigation |*/
@@ -54,7 +54,7 @@ nav ul li {
 
 nav ul li a {
   display: block;
-  padding: 30px 20px;
+  padding: 30px 5px;
   color: #222;
   font-size: .9em;
   letter-spacing: 1px;
